@@ -1,5 +1,11 @@
 2016-07-22  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal-data-local.h (e_target_ops):
+	Add load_group, start_group, get_raw_pointer, alloc, shm_alloc
+	& free.
+
+2016-07-22  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Move
 	target_ops member...
 	* e-hal/src/epiphany-hal.c: ... from here.
